Avançando no desenvolvimento e aprendizado do Spring.

--- a/zoologico/src/main/resources/templates/index.html
+++ b/zoologico/src/main/resources/templates/index.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${zoo.title()}"></title>
 </head>
     <body>
         <h1 class="teste" th:text="${zoo.getNome()}"></h1>
-        <h1 class="teste" th:text="${zoo.imprimeAlgo()}"></h1>
-        <p style="color: darkred">Escolha uma das opções:</p>
+        <p style="color: #3f8b5d">Escolha uma das opções:</p>
         <button onclick="window.location = 'animaisLista';">Ver os animais do zoológico?</button>
         <button onclick="window.location = 'insertAnimal';">Inserir um animal no zoológico?</button>
     </body>
