Pegando informações do Form

--- a/zoologico/src/main/resources/templates/index.html
+++ b/zoologico/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
         <h1 class="teste" th:text="${zoo.getNome()}"></h1>
         <p style="color: #3f8b5d">Escolha uma das opções:</p>
         <button onclick="window.location = 'animaisLista';">Ver os animais do zoológico?</button>
-        <button onclick="window.location = 'insertAnimal';">Inserir um animal no zoológico?</button>
+        <button onclick="window.location = 'inserindoNovoAnimal';">Inserir um animal no zoológico?</button>
     </body>
 </html>
