--- a/zoologico/src/main/resources/templates/admin/novoAnimal.html
+++ b/zoologico/src/main/resources/templates/admin/novoAnimal.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <form action="">
-        <input type="text" name="entrada" class="entrada">
+    <form method="POST" th:object="${animal}" th:action="@{insertAnimais}">
+        <input type="text" class="entrada" th:field="*{entrada}">
         <input type="submit" name="Submit" class="entrada">
     </form>
 </body>
