--- a/Calculadora/src/main/resources/templates/resultado.html
+++ b/Calculadora/src/main/resources/templates/resultado.html
@@ -10,15 +10,8 @@
     </style>
 </head>
 <body>
-    <div class="result">
-        <h1 th:text="${val1}"></h1>
-        <h1 th:text="${opcao}"></h1>
-        <h1 th:text="${val2}"></h1>
-        <h1>=</h1>
-        <h1 th:text="${resultado}"></h1>
-    </div>
 
-    <p><a href="/calculadora">Home</a></p>
+    <h1 th:text="${teste}"></h1>
 
 </body>
 </html>
